simple instagram feed for #5. would like to create a filter to bold tags and user @'s

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,8 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/navigation.js"></script>
     <script src="scripts/controllers/blog.js"></script>
+    <script src="scripts/services/instagramService.js"></script>
+    <script src="scripts/controllers/instagram.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
