mocked http calls in unit tests for #6. made column 800px wide

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
         <script src="scripts/vendor/json3.min.js"></script>
     <![endif]-->
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="width: 800px; margin: auto;">
       <div class="row-fluid">
         <div class="span2">
           <div ng-include src="'views/navigation.html'" ng-controller="NavigationCtrl"></div>
