fixed links to be html5mode compliant

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
       <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <div id="content">
-      <div id="header" ng-include src="'views/header.html'" ng-controller="HeaderCtrl"></div>
+      <div id="header" ng-include src="'/views/header.html'" ng-controller="HeaderCtrl"></div>
       <div class="ng-view"></div>
     </div>
     <script src="components/jquery/jquery.js"></script>
