build for deploy

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
       <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <div id="content">
-      <div id="header" ng-include src="'/views/header.html'" ng-controller="HeaderCtrl"></div>
+      <div id="header" ng-include src="'/views/header.html'"></div>
       <div class="ng-view"></div>
     </div>
     <script src="components/jquery/jquery.js"></script>
@@ -37,7 +37,6 @@
     <script src="scripts/services/blogService.js"></script>
 
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/header.js"></script>
     <script src="scripts/controllers/stockists.js"></script>
     <script src="scripts/services/instagramService.js"></script>
     <script src="scripts/controllers/instagram.js"></script>
