--- a/app/index.html
+++ b/app/index.html
@@ -25,11 +25,9 @@
       <div id="header" ng-include src="'/views/header.html'"></div>
       <div class="ng-view"></div>
     </div>
-    <script src="components/jquery/jquery.js"></script>
-    <script src="components/bootstrap/docs/assets/js/bootstrap.js"></script>
     <script src="components/angular/angular.js"></script>
-    <script src="components/modernizr/modernizr.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
+    <script src="//angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0-SNAPSHOT.min.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -39,7 +37,6 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/stockists.js"></script>
     <script src="scripts/services/instagramService.js"></script>
-    <script src="scripts/controllers/instagram.js"></script>
     <script src="scripts/controllers/projects.js"></script>
     <script src="scripts/services/store.js"></script>
     <!-- endbuild -->
