--- a/app/index.html
+++ b/app/index.html
@@ -22,23 +22,24 @@
       <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <div id="content">
-      <div id="header" ng-include src="'/views/header.html'"></div>
+      <div id="header" ng-include src="'views/header.html'"></div>
       <div class="ng-view"></div>
     </div>
     <script src="components/angular/angular.js"></script>
+    <script src="dep/angularjs-bootstrap/ui-bootstrap-tpls-0.1.0-SNAPSHOT.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
-    <script src="//angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0-SNAPSHOT.min.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     
-    <script src="scripts/services/blogService.js"></script>
+    <script src="scripts/services/blog.js"></script>
 
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/stockists.js"></script>
     <script src="scripts/services/instagramService.js"></script>
     <script src="scripts/controllers/projects.js"></script>
     <script src="scripts/services/store.js"></script>
+    <script src="scripts/controllers/visual.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
