--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="styles/main.css"/>
     <link rel="stylesheet" href="components/angular-ui/build/angular-ui.min.css"/>
+    <link rel="stylesheet" href="components/fancybox/source/jquery.fancybox.css"/>
   </head>
   <body ng-app="casteApp">
     <!--[if lt IE 7]>
@@ -25,8 +26,11 @@
       <div id="header" ng-include src="'views/header.html'"></div>
       <div class="ng-view"></div>
     </div>
+    <script src="components/jquery/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
+    <script src="components/fancybox/source/jquery.fancybox.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
+    <script src="dependencies/bootstrap/ui-bootstrap-custom-tpls-0.1.0-SNAPSHOT.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
