touched up logo to link, made about page, chaned styles on blog and project arrows

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/filters/emphasized.js"></script>
     
     <script src="scripts/services/instagram.js"></script>
     <script src="scripts/services/store.js"></script>
@@ -43,6 +44,7 @@
     <script src="scripts/controllers/stockists.js"></script>
     <script src="scripts/controllers/projects.js"></script>
     <script src="scripts/controllers/visual.js"></script>
+    <script src="scripts/controllers/about.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
