removed angular-ui/bootstrap directives from ieshiv

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
       // However, IF you have custom directives (yours or someone else's) then
       // enumerate the list of tags in window.myCustomTags
    
-      window.myCustomTags = [ 'carousel', 'slide' ]; // optional
+      window.myCustomTags = []; // optional
       </script>
       <script src="components/angular-ui/build/angular-ui-ieshiv.js"></script>
     <![endif]-->
