--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <script src="scripts/controllers/projects.js"></script>
     <script src="scripts/controllers/visual.js"></script>
     <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/directives/ng-rollover.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
