--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>caste quality.</title>
+    <title>caste quality</title>
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="styles/main.css"/>
@@ -38,11 +38,13 @@
       <div id="header" ng-include src="'views/header.html'"></div>
       <div class="ng-view"></div>
     </div>
+    <script src="components/modernizr/modernizr.js"></script>
     <script src="components/jquery/jquery.js"></script>
     <script src="components/fancybox/source/jquery.fancybox.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
     <script src="dependencies/bootstrap/ui-bootstrap-custom-tpls-0.1.0-SNAPSHOT.js"></script>
+    <!--<script src="dependencies/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>-->
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
