--- a/app/index.html
+++ b/app/index.html
@@ -61,12 +61,11 @@
     <script src="scripts/controllers/about.js"></script>
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <!--<script>
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+    <script>
+      var _gaq=[['_setAccount','UA-38997413-1'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>-->
+    </script>
   </body>
 </html>
