--- a/app/index.html
+++ b/app/index.html
@@ -42,22 +42,11 @@
     <script src="components/fancybox/source/jquery.fancybox.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
-    <script src="dependencies/bootstrap/ui-bootstrap-custom-tpls-0.1.0-SNAPSHOT.js"></script>
+    <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--<script src="dependencies/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>-->
 
     <!-- build:js scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/filters/emphasized.js"></script>
-    
-    <script src="scripts/services/instagram.js"></script>
-    <script src="scripts/services/store.js"></script>
-    <script src="scripts/services/blog.js"></script>
-
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/stockists.js"></script>
-    <script src="scripts/controllers/projects.js"></script>
-    <script src="scripts/controllers/visual.js"></script>
-    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/coffee.js"></script>
     <!-- endbuild -->
 
     <script>
