--- a/app/index.html
+++ b/app/index.html
@@ -43,9 +43,8 @@
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <!--<script src="dependencies/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>-->
-
-    <!-- build:js scripts/scripts.js -->
+    
+    <!-- build:js scripts/coffee.js -->
     <script src="scripts/coffee.js"></script>
     <!-- endbuild -->
 
