working on castequality/castequality.github.com#1

--- a/app/index.html
+++ b/app/index.html
@@ -44,9 +44,7 @@
     <script src="components/angular-ui/build/angular-ui.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     
-    <!-- build:js scripts/coffee.js -->
-    <script src="scripts/coffee.js"></script>
-    <!-- endbuild -->
+    <script src="scripts/scripts.js"></script>
 
     <script>
       var _gaq=[['_setAccount','UA-38997413-1'],['_trackPageview']];
