--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,13 @@
       <div id="header" ng-include src="'views/header.html'"></div>
       <div class="ng-view"></div>
     </div>
+    <script src="components/modernizr/modernizr.js"></script>
     <script src="components/jquery/jquery.js"></script>
     <script src="components/fancybox/source/jquery.fancybox.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="components/angular-svg-fallback/js/angular-svg-fallback.js"></script>
     
     <script src="scripts/scripts.js"></script>
 
