--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <script src="components/jquery/jquery.js"></script>
     <script src="components/fancybox/source/jquery.fancybox.js"></script>
     <script src="components/angular/angular.js"></script>
+    <script src="components/ng-infinite-scroller/build/ng-infinite-scroll.min.js"></script>
     <script src="components/angular-ui/build/angular-ui.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="components/angular-svg-fallback/js/angular-svg-fallback.js"></script>
