--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="components/angular-ui/build/angular-ui.min.css"/>
     <link rel="stylesheet" href="components/fancybox/source/jquery.fancybox.css"/>
   </head>
-  <body ng-app="casteApp">
+  <body ng-app="casteApp" ng-class="{'splash-body': splash }">
     <!--[if lt IE 7]>
         <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
@@ -34,10 +34,11 @@
       <script src="components/es5-shim/es5-shim.js"></script>
       <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
-    <div id="content">
-      <div id="header" ng-include src="'views/header.html'"></div>
+    <div id="content" ng-class="{'splash-container': splash, container: !splash}">
+      <div ui-if="!splash" id="header" ng-include src="'views/header.html'"></div>
       <div class="ng-view"></div>
     </div>
+
     <script src="components/modernizr/modernizr.js"></script>
     <script src="components/jquery/jquery.js"></script>
     <script src="components/fancybox/source/jquery.fancybox.js"></script>
